quick fix for css vertical spacing

--- a/web/room.css
+++ b/web/room.css
@@ -86,7 +86,7 @@ div.tables {
 
 div.bottom {
     position: relative;
-    top: -20px;
+    top: -13px;
     align: center:
     text-align: center;
     padding:2px;	 
